@@ -25,6 +25,9 @@ bzr-0.0.5  NOT RELEASED YET
 
     * Better help messages for many commands.
 
+    * Expose bzrlib.open_tracefile() to start the tracefile; until
+      this is called trace messages are just discarded.
+
 
 bzr-0.0.4  2005-04-22
 
